syntax="proto3";

package pb;

import "categories.proto";

option go_package = "github.com/gufir/money-management/pb";

message GetCategoriesRequest {
}

message GetCategoriesResponse {
    repeated Category categories = 1;
}